--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,3 +3,16 @@
     height: 40px; /* Maintain aspect ratio */
     margin-right: 10px;
   }
+
+   #navbar
+  {
+   position: fixed;
+   width: 100%;
+   z-index: 1000;
+  
+  }
+  .navbar {
+    margin-bottom: 20px; /* Adjust the value as needed */
+   
+  }
+  
